# todo_rust

./: Cargo.toml  LICENSE  README.md  todos.json
src/: application.rs  domain.rs  infrastructure.rs  main.rs
src/application/: dto.rs  gateways.rs  usecases.rs
src/application/dto/: create_todo_req.rs  delete_todo_req.rs  read_todo_req.rs  read_todos_req.rs  update_todo_req.rs
src/application/gateways/: id_generator.rs  todo_repository.rs
src/application/usecases/: create_todo.rs  delete_todo.rs  read_todo.rs  read_todos.rs  update_todo.rs
src/domain/: todo.rs
src/domain/todo/enums/: color.rs
src/infrastructure/: id_generator_impl.rs  todo_repo_in_mem.rs
src/presentation/: cli.rs
src/presentation/cli/: command_controll.rs  print_color.rs
