[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = "0.4.31"
clap = "4.4.7"
colored = "2.0.4"
jwt = "0.16.0"
rand = "0.8.5"
serde = "1.0.190"
serde_json = "1.0.108"
